crates/velme-ir/tests/snapshots/validate__golden_ir_rejects@call_in_body.json.snap
---
source: crates/velme-ir/tests/validate.rs
expression: "format!(\"{}\\n{}\", render_human(&diags, file, Some(&source), false),\nserde_json::to_string_pretty(&json).expect(\"diagnostics serialize\"))"
input_file: tests/golden/ir/reject/call_in_body.json
---
Error: The generated program broke a rule: it calls the goal `CalculateScore` from inside an expression; only the goal's `call` block calls goals.  [VL0402]
    ╭─[ tests/golden/ir/goals.velme:30:1 ]
    │
 30 │ ╭─▶ goal FindBadge(player: Player) -> Text:
 31 │ ├─▶     plan: "Gold for a score of 100 or more; Jumper and the height for a named player jumping over 2.5; else Rookie."
    │ │                                                                                                                          
    │ ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── here
    │     
    │     Note: at `/body/then`
────╯

[
  {
    "code": "VL0402",
    "severity": "error",
    "message": "The generated program broke a rule: it calls the goal `CalculateScore` from inside an expression; only the goal's `call` block calls goals.",
    "file": "tests/golden/ir/goals.velme",
    "span": {
      "start": 662,
      "end": 818,
      "line": 30,
      "column": 1
    },
    "labels": [],
    "notes": [
      "at `/body/then`"
    ]
  }
]
