crates/velme-ir/tests/snapshots/validate__golden_ir_rejects@collection_nesting.json.snap
---
source: crates/velme-ir/tests/validate.rs
expression: "format!(\"{}\\n{}\", render_human(&diags, file, Some(&source), false),\nserde_json::to_string_pretty(&json).expect(\"diagnostics serialize\"))"
input_file: tests/golden/ir/reject/collection_nesting.json
---
Error: The generated program broke a rule: it nests list operations more than 4 deep inside one another's functions.  [VL0402]
    ╭─[ tests/golden/ir/goals.velme:40:1 ]
    │
 40 │ ╭─▶ goal FindHighestJumpingPlayer(players: List<Player>) -> Player?:
 41 │ ├─▶     plan: "Return the player who jumps highest, or nothing for no players."
    │ │                                                                                 
    │ ╰───────────────────────────────────────────────────────────────────────────────── here
    │     
    │     Note: at `/body/fn/body/fn/body/fn/body/fn/body`
────╯

[
  {
    "code": "VL0402",
    "severity": "error",
    "message": "The generated program broke a rule: it nests list operations more than 4 deep inside one another's functions.",
    "file": "tests/golden/ir/goals.velme",
    "span": {
      "start": 1055,
      "end": 1195,
      "line": 40,
      "column": 1
    },
    "labels": [],
    "notes": [
      "at `/body/fn/body/fn/body/fn/body/fn/body`"
    ]
  }
]
