crates/velme-ir/tests/snapshots/validate__golden_ir_rejects@schema_unknown_kind.json.snap
---
source: crates/velme-ir/tests/validate.rs
expression: "format!(\"{}\\n{}\", render_human(&diags, file, Some(&source), false),\nserde_json::to_string_pretty(&json).expect(\"diagnostics serialize\"))"
input_file: tests/golden/ir/reject/schema_unknown_kind.json
---
Error: The generated program wasn't in the right shape.  [VL0401]
    ╭─[ tests/golden/ir/goals.velme:30:1 ]
    │
 30 │ ╭─▶ goal FindBadge(player: Player) -> Text:
 31 │ ├─▶     plan: "Gold for a score of 100 or more; Jumper and the height for a named player jumping over 2.5; else Rookie."
    │ │                                                                                                                          
    │ ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── here
    │     
    │     Note: unknown variant `loop`, expected one of `literal`, `input`, `local`, `record`, `list`, `field`, `binary`, `unary`, `let`, `if`, `unwrap_or`, `map`, `filter`, `find`, `reduce`, `sort_by`, `all`, `any`, `builtin`, `call` at line 42 column 18
────╯

[
  {
    "code": "VL0401",
    "severity": "error",
    "message": "The generated program wasn't in the right shape.",
    "file": "tests/golden/ir/goals.velme",
    "span": {
      "start": 662,
      "end": 818,
      "line": 30,
      "column": 1
    },
    "labels": [],
    "notes": [
      "unknown variant `loop`, expected one of `literal`, `input`, `local`, `record`, `list`, `field`, `binary`, `unary`, `let`, `if`, `unwrap_or`, `map`, `filter`, `find`, `reduce`, `sort_by`, `all`, `any`, `builtin`, `call` at line 42 column 18"
    ]
  }
]
