crates/velme-ir/tests/snapshots/validate__golden_ir_rejects@shadowed_name.json.snap
---
source: crates/velme-ir/tests/validate.rs
expression: "format!(\"{}\\n{}\", render_human(&diags, file, Some(&source), false),\nserde_json::to_string_pretty(&json).expect(\"diagnostics serialize\"))"
input_file: tests/golden/ir/reject/shadowed_name.json
---
Error: The generated program broke a rule: the name `p` is already in use here.  [VL0402]
    ╭─[ tests/golden/ir/goals.velme:40:1 ]
    │
 40 │ ╭─▶ goal FindHighestJumpingPlayer(players: List<Player>) -> Player?:
 41 │ ├─▶     plan: "Return the player who jumps highest, or nothing for no players."
    │ │                                                                                 
    │ ╰───────────────────────────────────────────────────────────────────────────────── here
    │     
    │     Help: give it a name of its own
    │     
    │     Note: at `/body/body/fn/param`
────╯

[
  {
    "code": "VL0402",
    "severity": "error",
    "message": "The generated program broke a rule: the name `p` is already in use here.",
    "file": "tests/golden/ir/goals.velme",
    "span": {
      "start": 1055,
      "end": 1195,
      "line": 40,
      "column": 1
    },
    "labels": [],
    "notes": [
      "at `/body/body/fn/param`"
    ],
    "help": "give it a name of its own"
  }
]
